--- a/Cesfam/Cesfam-war/nbproject/project.properties
+++ b/Cesfam/Cesfam-war/nbproject/project.properties
@@ -29,8 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-codec-1.10.jar=C:\\commons-codec-1.10.jar
-file.reference.primefaces-6.0.jar=C:\\Users\\Pelao\\Downloads\\primefaces-6.0.jar
+file.reference.commons-codec-1.10.jar=..\\commons-codec-1.10.jar
+file.reference.primefaces-6.0.jar=..\\primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,8 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.Cesfam-ejb.dist}:\
-    ${file.reference.primefaces-6.0.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.primefaces-6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
